# qt-sandbox

./: .gitignore  .releaserc.json  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  build-with-qmake.sh  copyright  create-AppImage.sh  main.cpp  myprog.desktop  qt-sandbox.1  qt-sandbox.desktop  qt-sandbox.pro  xy.txt
01-build-system/: .gitignore  01-build-system.pro  CMakeLists.txt  README.md  build-with-cmake.sh  build-with-qmake.sh  clean.sh  colormenu.cpp  colormenu.h  create-AppImage.sh  main.cpp  myprog.desktop
01-build-system/qmake-build-debug/: 01-build-system
debian/: changelog  control  copyright  manpage.1  rules
development/: build-recipe-locally.sh  build-with-cmake.sh  build-with-qmake.sh  clean-ALL.sh  clean.sh  common-include.sh  create-AppImage.sh  create-debian-binary-package.sh  launchpad-build-recipe-locally.sh  launchpad-recipe  launchpad-run-make-rules.sh  run-make-rules.sh
development/DEBIAN/: control  copyright
development/debian/: README.Debian  README.source  changelog  control
development/release-notes/: release-develop.md  release-master.md
packaging/: dpkg.sh
src/: colormenu.h  main.cpp
testsrc/: run.sh  tests.cpp  tests.h  tests.pro
